--- a/.github/workflows/snake_.yml
+++ b/.github/workflows/snake_.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4  # Updated to latest version
 
       - name: Generate Snake Animation
         uses: Platane/snk@master
@@ -19,7 +19,7 @@ jobs:
           outputs: dist/github-contribution-grid-snake.svg
 
       - name: Upload Snake Animation
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4  # Updated from v3 to v4
         with:
           name: snake-animation
           path: dist
