--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,1 +1,26 @@
 
+name: Generate Snake Animation
+
+on:
+  schedule:
+    - cron: "0 0 * * *"  # Runs every day at midnight
+  workflow_dispatch:  # Allows manual triggering
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4  # Updated to latest version
+
+      - name: Generate Snake Animation
+        uses: Platane/snk@master
+        with:
+          github_user_name: yasirkhan140  # Change to your GitHub username
+          outputs: dist/github-contribution-grid-snake.svg
+
+      - name: Upload Snake Animation
+        uses: actions/upload-artifact@v4  # Updated from v3 to v4
+        with:
+          name: snake-animation
+          path: dist
