--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -13,15 +13,15 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Generate Snake Animation
-        uses: Platane/snk@v3  # Use the latest stable version
+        uses: Platane/snk@v3  # Make sure this is the latest version
         with:
-          github_user_name: yasirkhan140  # Change this to your GitHub username
-          svg_out_path: assets/github-contribution-grid-snake.svg  # Updated path
+          github_user_name: yasirkhan140  # Replace with your GitHub username
+          outputs: dist  # Correct input name
 
       - name: Commit and Push the Snake Animation
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add assets/github-contribution-grid-snake.svg
+          git add dist/github-contribution-grid-snake.svg
           git commit -m "Update snake animation" || exit 0  # Prevent error if no changes
           git push
