--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -11,17 +11,19 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GH_PAT }}  # Use the personal access token
 
       - name: Generate Snake Animation
-        uses: Platane/snk@v3  # Make sure this is the latest version
+        uses: Platane/snk@v3
         with:
-          github_user_name: yasirkhan140  # Replace with your GitHub username
-          outputs: dist  # Correct input name
+          github_user_name: yasirkhan140
+          outputs: dist
 
       - name: Commit and Push the Snake Animation
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add dist/github-contribution-grid-snake.svg
-          git commit -m "Update snake animation" || exit 0  # Prevent error if no changes
-          git push
+          git commit -m "Update snake animation" || exit 0
+          git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/yasirkhan140/yasirkhan140.git HEAD:main
